--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -1,8 +1,26 @@
 html,
-body
+body,
+.app,
+.content,
+.container,
+#__next
   padding: 0
   margin: 0
+  height: 100%
+  width: 100%
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif
+
+.app
+  display: flex
+  position: relative
+
+.Sidebar
+  display: flex
+  height: 100%
+
+.Navbar
+  display: flex
+  justify-content: space-between
 
 a
   color: inherit
