--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -2,7 +2,6 @@ html,
 body,
 .app,
 .content,
-.container,
 #__next
   padding: 0
   margin: 0
@@ -14,14 +13,6 @@ body,
   display: flex
   position: relative
 
-.Sidebar
-  display: flex
-  height: 100%
-
-.Navbar
-  display: flex
-  justify-content: space-between
-
 a
   color: inherit
   text-decoration: none
@@ -29,10 +20,10 @@ a
 *
   box-sizing: border-box
 
-@media (prefers-color-scheme: dark)
-  html
-    color-scheme: dark
+// @media (prefers-color-scheme: dark)
+//   html
+//     color-scheme: dark
 
-  body
-    color: white
-    background: black
+//   body
+//     color: white
+//     background: black
