--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap')
 html,
 body,
 .app,
@@ -8,7 +9,6 @@ body,
   width: 100%
   display: block
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif
-
 .app
   display: flex
   position: relative
@@ -26,3 +26,13 @@ a
   padding: 16px
   height: 100vh
   border-right: 1px solid gray
+
+.facebook-Button
+  height: 50px
+  font-size: 18px
+  width: 250px
+  background-color: white
+  color: black
+  font-weight: 500
+  justify-content: center
+  align-content: center
